compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_constant_in_const.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\nimport mod\n\nconst c = mod   .   constant\n"
---
----- BEFORE RENAME
-- mod.gleam
pub const constant = 10

-- app.gleam

import mod

const c = mod   .   constant
          ↑▔▔               


----- AFTER RENAME
-- mod.gleam
pub const constant = 10

-- app.gleam

import mod as module

const c = module   .   constant
