compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_constant_in_expression.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\nimport mod\n\npub fn main() {\n  echo mod.constant\n}\n"
---
----- BEFORE RENAME
-- mod.gleam
pub const constant = 10

-- app.gleam

import mod

pub fn main() {
  echo mod.constant
       ↑▔▔         
}


----- AFTER RENAME
-- mod.gleam
pub const constant = 10

-- app.gleam

import mod as module

pub fn main() {
  echo module.constant
}
