compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_custom_type.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "import mod\ntype Type { Var(mod.Type) }"
---
----- BEFORE RENAME
-- mod.gleam
pub fn fn1() { Nil }
pub const const1 = 5
pub const const2 = <<0:8>>
pub const const3 = "Hello"
pub type Type { Variant1 Variant2(Int) }
pub type GenericType(inner) { Node(inner, GenericType(inner)) Leaf }

-- app.gleam
import mod
type Type { Var(mod.Type) }
                ↑▔▔        


----- AFTER RENAME
-- mod.gleam
pub fn fn1() { Nil }
pub const const1 = 5
pub const const2 = <<0:8>>
pub const const3 = "Hello"
pub type Type { Variant1 Variant2(Int) }
pub type GenericType(inner) { Node(inner, GenericType(inner)) Leaf }

-- app.gleam
import mod as module
type Type { Var(module.Type) }
